# ThoracicProblem

./: Heart Attack Predictions.ipynb  LICENSE  README.md  Thoracic Data - Python.ipynb  pyproject.toml  thoracic.arff
